[package]
name = "contra"
version = "3.0.3"
authors = ["Benedikt Danner <benedikt@danner.eu.com>"]
edition = "2021"
description = "A minimal serialization/deserialization library with expand persistancy functionality"
readme = "./README.md"
repository = "https://github.com/Homuncoli/contra"
license-file = "./LICENSE"
keywords = ["xtra", "config", "serialization", "deserialization"]
categories = ["config", "encoding", "filesystem", "game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-contra = "3.0.1"
proc-contra = "3.0.1"

[workspace]
members = [
    "lib-contra",
    "proc-contra",
]
