[package]
name = "lib-contra"
version = "4.13.2"
authors = ["Benedikt Danner <benedikt@danner.eu.com>"]
edition = "2021"
description = "The function implementation of contra"
readme = "../README.md"
repository = "https://github.com/Homuncoli/contra"
license-file = "../LICENSE"
keywords = ["xtra", "config", "serialization", "deserialization", "lib"]
categories = ["config", "encoding", "filesystem", "game-development", "game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

