[package]
name = "proc-contra"
version = "3.2.0"
authors = ["Benedikt Danner <benedikt@danner.eu.com>"]
edition = "2021"
description = "The proc-macros of contra"
readme = "../README.md"
repository = "https://github.com/Homuncoli/contra"
license-file = "../LICENSE"
keywords = ["xtra", "config", "serialization", "deserialization", "proc-macro"]
categories = ["config", "encoding", "filesystem", "game-development", "game-engines"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
quote = "1.0"
syn = "1.0"
